delete number from sms response + add showing sms by token
