# internal/adapter/in/http/routes.go
@@ -50,6 +50,6 @@ func RegisterRoutes(mux *http.ServeMux, h Handlers, authCfg AuthConfig) {
 	mux.HandleFunc("GET /api/v1/sms/status", h.Sms.checkStatus)
 	mux.Handle("GET /api/v1/sms/all", authMiddleware(RequireRole("admin", http.HandlerFunc(h.Sms.getSmsListFromProvider))))
 
-	mux.Handle("GET /api/v1/sms/users/userId", authMiddleware(http.HandlerFunc(h.Sms.getSmsListByUser)))
+	mux.Handle("GET /api/v1/sms/users/token", authMiddleware(http.HandlerFunc(h.Sms.getSmsListByToken)))
 	mux.Handle("GET /api/v1/sms/agents/agentId", authMiddleware(http.HandlerFunc(h.Sms.getSmsListByAgentId)))
 }
