# internal/adapter/in/http/sms_handler.go
@@ -79,6 +79,7 @@ func (h *SmsHandler) checkStatus(w http.ResponseWriter, req *http.Request) {
 
 // GetSmsList godoc
 // @Summary Get all SMS
+// @Security BearerAuth
 // @Description Returns the list of all sent SMS
 // @Tags SMS
 // @Accept json
@@ -99,6 +100,7 @@ func (h *SmsHandler) getSmsList(w http.ResponseWriter, req *http.Request) {
 
 // getSmsListByAgentId godoc
 // @Summary get sms sent by agent by id
+// @Security BearerAuth
 // @Description Returns list of sms
 // @Tags SMS
 // @Accept json
@@ -120,20 +122,21 @@ func (h *SmsHandler) getSmsListByAgentId(w http.ResponseWriter, req *http.Reques
 	}
 }
 
-// getSmsListByUser godoc
-// @Summary get sms sent to user
+// getSmsListByToken godoc
+// @Summary get sms sent to given token
+// @Security BearerAuth
 // @Description Returns list of sms
 // @Tags SMS
 // @Accept json
 // @Produce json
-// @Param userId path string true "User ID"
+// @Param token path string true "user token"
 // @Success 200 {array} model.SmsResponse "SMS status details"
 // @Failure 400 {object} map[string]string "Invalid request"
 // @Failure 500 {object} map[string]string "Internal server error"
-// @Router /api/v1/sms/users/userId [get]
-func (h *SmsHandler) getSmsListByUser(w http.ResponseWriter, req *http.Request) {
-	userId := req.PathValue("userId")
-	smsList, err := h.smsService.GetSmsByUser(req.Context(), userId)
+// @Router /api/v1/sms/users/token [get]
+func (h *SmsHandler) getSmsListByToken(w http.ResponseWriter, req *http.Request) {
+	userId := req.PathValue("token")
+	smsList, err := h.smsService.GetSmsByToken(req.Context(), userId)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
@@ -145,6 +148,7 @@ func (h *SmsHandler) getSmsListByUser(w http.ResponseWriter, req *http.Request) 
 
 // getSmsListFromProvider godoc
 // @Summary get sms sent by provider
+// @Security BearerAuth
 // @Description Returns list of sms
 // @Tags SMS
 // @Accept json
